--- a/Website/about.html
+++ b/Website/about.html
@@ -63,6 +63,36 @@
                     </p>
                 </div>
             </div>
+            <div class="about-col">
+                <div class="text-content">
+                    <p>Majority of the students belong to the economically challenged level of society. It is the University's commitment to give qualified and talented students access to quality and responsive education to aid them in the achievement of their dreams and improve their lives. Being a well-educated and skilled individual, they will not only become job seekers but job creators as well, a force of knowledge workers and entrepreneurs.
+                    <br>
+                    Iskolar ng Bayan (Scholars of the Nation) is what we call our students because the Philippine Government and other non-government institutions subsidize their tuition and other fees. More than a hundred of the student population are foreigners from China, Singapore, Indonesia, Cambodia, Myanmar, Tanzania, Nigeria, and Ghana. They are enrolled in business, language, statistics, communication, and education courses in the undergraduate and graduate levels. Students from Korea regularly visit PUP in summer to take up Intensive English courses.
+                    </p>
+                    <p>The Polytechnic University of the Philippines takes pride in its capability to accommodate the students because it:</p>
+                    <ul>
+                        <li>has 25 campuses to make education accessible to everyone;</li>
+                        <li>offers a wide range of courses: doctorate, master's, and bachelor's degrees as well as technology courses available through traditional and open, flexible or distance learning;</li>
+                        <li>pioneered the ladderized system and the accreditation and equivalency system through the Expanded Tertiary Education Equivalency and Accreditation Program (ETEEAP) and the Nontraditional System Program (NTSP);</li>
+                        <li>maintains an average size of 45-50 students per class;</li>
+                        <li>offers an extensive selection of educational choices through more than 60 undergraduate and graduate programs;</li>
+                        <li>schedules weekend and evening classes;</li>
+                        <li>brings the resources and programs of PUP not only to full-time students but also to part-time and adult learners; and</li>
+                        <li>provides a long list of extension services for the community and the country.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="about-col">
+                <img src="images/about3.jpg" alt="About image 3">
+                <div class="text-content">
+                    <p>The commitment of its leaders, faculty, staff, students, alumni and friends has formed the cornerstone of this University that has exceeded expectations with every generation of the graduates it has produced since its establishment.
+                    <br>
+                    Today, PUP is relishing its successes and its students are enjoying unprecedented academic opportunities, an enhanced campus environment, upgraded colleges, state-of-the-art technology, and nationally and internationally recognized programs.
+                    <br>
+                    PUP celebrated 120 years last October 2024. It has gone far from what it was more than a century ago. This is mainly due to the support given by the government and the PUP Community and its benefactors. With the combined effort, PUP will continue to be a partner in nation-building and in poverty alleviation for the marginalized sector of society with quality, responsive, and relevant education as a tool.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     
