--- a/Website/contact.html
+++ b/Website/contact.html
@@ -46,21 +46,21 @@
                 <div>
                     <i class="fa-solid fa-house"></i>
                     <span>
-                        <h5>XYZ Road, ABC Building</h5>
-                        <p>Manila, Philippines</p>
+                        <h5>Polytechnic University of the Philippines</h5>
+                        <p>1016 Anonas, Sta. Mesa, Maynila, Kalakhang Maynila</p>
                     </span>
                 </div>
                 <div>
                     <i class="fa-solid fa-phone"></i>
                     <span>
-                        <h5>+123456789</h5>
+                        <h5>Phone: (+63 2) 5335-1PUP (5335-1787) or 5335-1777</h5>
                         <p>Monday to Saturday</p>
                     </span>
                 </div>
                 <div>
                     <i class="fa-solid fa-envelope"></i>
                     <span>
-                        <h5>pup@edu.ph</h5>
+                        <h5>Email: inquire@pup.edu.ph</h5>
                         <p>Email us your query</p>
                     </span>
                 </div>
@@ -83,29 +83,28 @@
 
     <!-- Footer -->
 
-    <section class="footer">
+    <section class="footer" id="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ipsam repudiandae distinctio vitae et asperiores ipsum, incidunt nihil quia soluta?</p>
+        <p>Connect with us through our official PUP social media channels to stay updated, ask questions, and engage with our community. <br> Follow PUP social media for the latest news, events, and announcements!"</p>
         <div class="icons">
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.facebook.com/ThePUPOfficial/" target="_blank">
+                <i class="fa-brands fa-facebook">
+                </i>
+            </a>
+            <a href="https://x.com/thepupofficial" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/thepupofficial" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.youtube.com/@pupcreatv" target="_blank">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
         </div>
         <p>Made with <i class="fa-regular fa-heart"></i> by Masamune</p>
     </section>
 
     <!-- JS Toggle Menu -->
-    <script>
-        var navLinks = document.getElementById("navLinks");
-
-        function showMenu() {
-            navLinks.style.right = "0";
-        }
-
-        function hideMenu() {
-            navLinks.style.right = "-200px";
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
