--- a/Website/home.html
+++ b/Website/home.html
@@ -83,24 +83,23 @@
                 <h3>Undergraduate Programs</h3>
                 <div class="two-column-list">
                     <nav class="program-list">
-                        <a href="#">College of Accountancy and Finance (CAF)</a>
-                        <a href="#">College of Architecture, Design and the Built Environment (CADBE)</a>
-                        <a href="#">College of Arts and Letters (CAL)</a>
-                        <a href="#">College of Business Administration (CBA)</a>
-                        <a href="#">College of Communication (COC)</a>
-                        <a href="#">College of Computer and Information Sciences (CCIS)</a>
-                        <a href="#">College of Education (COED)</a>
-                        <a href="#">College of Engineering (CE)</a>
+                        <a href="course.html#caf">College of Accountancy and Finance (CAF)</a>
+                        <a href="course.html#cadbe">College of Architecture, Design and the Built Environment (CADBE)</a>
+                        <a href="course.html#cal">College of Arts and Letters (CAL)</a>
+                        <a href="course.html#cba">College of Business Administration (CBA)</a>
+                        <a href="course.html#coc">College of Communication (COC)</a>
+                        <a href="course.html#ccis">College of Computer and Information Sciences (CCIS)</a>
+                        <a href="course.html#coed">College of Education (COED)</a>
+                        <a href="course.html#ce">College of Engineering (CE)</a>
                     </nav>
                     <nav class="program-list">
-                        <a href="#">College of Human Kinetics (CHK)</a>
-                        <a href="#">College of Law (CL)</a>
-                        <a href="#">College of Political Science and Public Administration (CPSPA)</a>
-                        <a href="#">College of Social Sciences and Development (CSSD)</a>
-                        <a href="#">College of Science (CS)</a>
-                        <a href="#">College of Tourism, Hospitality and Transportation Management (CTHTM)</a>
-                        <a href="#">Open University System (OUS)</a>
-                        <a href="#">Institute of Technology (ITECH)</a>
+                        <a href="course.html#chk">College of Human Kinetics (CHK)</a>
+                        <a href="course.html#cpspa">College of Political Science and Public Administration (CPSPA)</a>
+                        <a href="course.html#cssd">College of Social Sciences and Development (CSSD)</a>
+                        <a href="course.html#cs">College of Science (CS)</a>
+                        <a href="course.html#cthtm">College of Tourism, Hospitality and Transportation Management (CTHTM)</a>
+                        <a href="course.html#ous">Open University System (OUS)</a>
+                        <a href="course.html#itech">Institute of Technology (ITECH)</a>
                     </nav>
                 </div>
             </div>
@@ -110,8 +109,8 @@
                     <h3>Graduate School</h3>
                     <p>The PUP Graduate School provides advanced professional studies and research in specialized fields leading to doctorate and master's degree programs for professionals.</p>
                     <nav class="program-list">
-                        <a href="#">Doctorate Degree Programs</a>
-                        <a href="#">Master's Degree Programs</a>
+                        <a href="course.html#doctorate">Doctorate Degree Programs</a>
+                        <a href="course.html#masters">Master's Degree Programs</a>
                         <a href="#">Graduate Diploma Program</a>
                     </nav>
                 </div>
