create html on new about us

--- a/PUP Website/about.html
+++ b/PUP Website/about.html
@@ -47,7 +47,7 @@
                     <br><br>
                     The governance of PUP is entrusted to the Board of Regents, which is responsible for policy-making to fulfill the University’s mission and programs as authorized by RA 8292 from the Commission on Higher Education. The University is led by a President appointed under RA 8292, who is supported by an Executive Vice President and Vice Presidents overseeing Academic Affairs, Student Services, Administration, Research, Extension and Development, and Finance.
                     </p>
-                    <a href="#footer" class="hero-btn peach-btn">EXPLORE NOW</a>
+                    <a href="about2.html" class="hero-btn peach-btn">EXPLORE NOW</a>
                 </div>
             </div>
             <div class="about-col">
