--- a/PUP Website/about2.html
+++ b/PUP Website/about2.html
@@ -33,62 +33,32 @@
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Our Certificate and Online Programs</h1>
+        <h1>About PUP</h1>
     </section>    
 
-    <!-- Blog page content-->
+    <!-- about us content -->
 
-    <section class="blog-content">
-        <div class="row">
-            <div class="blog-left">
-                <img src="images/certificate.jpg" alt="">
-                <h2>Our Certificate and Online Programs</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam sit nisi velit animi nesciunt alias similique distinctio repudiandae quam temporibus.</p>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi similique modi sint minus officia pariatur?</p>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quod reprehenderit doloribus maxime cupiditate corrupti atque distinctio ratione assumenda consectetur!</p>
-                <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab possimus repellendus explicabo voluptates! Obcaecati soluta eius eos, repellendus ullam sapiente?</p>
-
-                <div class="comment-box">
-                    <h3>Leave a comment</h3>
-                    <form action="" class="comment-form">
-                        <input type="text" placeholder="Your Name" required>
-                        <input type="email" placeholder="Your Email" required>
-                        <textarea name="" id="" rows="5" placeholder="Your Comment"></textarea>
-                        <button type="submit" class="hero-btn peach-btn">Submit</button>
-                    </form>
-                </div>
-
+    <section class="about2-nav">
+        <nav>
+            <div>
+                <ul>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                </ul>
             </div>
-            <div class="blog-right">
-                <h3>Academia</h3>
-                <div>
-                    <span><i class="fa-solid fa-user-graduate"></i> Students</span>
-                    <span>97,710</span>
-                </div>
-                <div>
-                    <span><i class="fa-solid fa-building-columns"></i> Student Organizations</span>
-                    <span>214</span>
-                </div>
-                <div>
-                    <span><i class="fa-solid fa-graduation-cap"></i> Academic Programs</span>
-                    <span>219</span>
-                </div>
-                <div>
-                    <span><i class="fa-solid fa-map"></i> Campuses</span>
-                    <span>25</span>
-                </div>
-            </div>
-        </div>
+            
+        </nav>
     </section>
-   
 
-
-
-
-    <!-- Footer -->
+    <!-- footer -->
 
     <section class="footer" id="footer">
         <h4>About Us</h4>
