--- a/PUP Website/course.html
+++ b/PUP Website/course.html
@@ -296,7 +296,7 @@
                         <h2 id="shs">High School</h2>
                         <div class="shs-grid">
                             <div class="college">
-                                <h3>Senior High School</h3>
+                                <h3 id="pupshs">Senior High School</h3>
                                 <h4>PUPSHS Tracks and Strands</h4>
                                 <ul>
                                     <li>ABM (Accountancy, Business and Management) Strand</li>
@@ -304,7 +304,7 @@
                                 </ul>
                             </div>
                             <div class="college">
-                                <h3>Laboratory  High School</h3>
+                                <h3 id="puplh">Laboratory  High School</h3>
                             </div>
                         </div>
                     </div>
