--- a/PUP Website/home.html
+++ b/PUP Website/home.html
@@ -112,15 +112,15 @@
                     <nav class="program-list">
                         <a href="course.html#doctorate">Doctorate Degree Programs</a>
                         <a href="course.html#masters">Master's Degree Programs</a>
-                        <a href="#">Graduate Diploma Program</a>
+                        <a href="course.html#gdp">Graduate Diploma Program</a>
                     </nav>
                 </div>
         
                 <div class="course-col">
                     <h3>High School</h3>
                     <nav class="program-list">
-                        <a href="#">Senior High School</a>
-                        <a href="#">Laboratory High School</a>
+                        <a href="course.html#pupshs">Senior High School</a>
+                        <a href="course.html#puplh">Laboratory High School</a>
                     </nav>
                 </div>
             </div>
