--- a/PUP Website/about.html
+++ b/PUP Website/about.html
@@ -42,7 +42,7 @@
                 <ul>
                     <li><a href="vm.html">Vision and Mission</a></li>
                     <li><a href="history.html">History</a></li>
-                    <li><a href="#section">University</a></li>
+                    <li><a href="logo-symbols.html">Logo and Symbols</a></li>
                     <li><a href="#section">University</a></li>
                     <li><a href="#section">University</a></li>
                     <li><a href="#section">University</a></li>
