--- a/PUP Website/history.html
+++ b/PUP Website/history.html
@@ -13,6 +13,51 @@
 </head>
 <body>
 
+<!-- Home -->
+
+    <section class="sub-header">
+        <nav>
+            <a href="home.html" class="logo-container">
+                <img src="images/logo.png" alt="Logo">
+                <p>Polytechnic University of the Philippines</p>
+            </a>
+            <div class="nav-links" id="navLinks">
+                <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+            <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+        </nav>
+        <h1>About PUP</h1>
+    </section>
+
+    <section class="about2-nav">
+        <nav>
+            <div>
+                <ul>
+                    <li><a href="vm.html">Vision and Mission</a></li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="#section">University</a></li>
+                    <li><a href="#section">University</a></li>
+                    <li><a href="#section">University</a></li>
+                    <li><a href="#section">University</a></li>
+                    <li><a href="#section">University</a></li>
+                    <li><a href="#section">University</a></li>
+                </ul>
+            </div>
+        </nav>
+    </section>
+
+<!-- History content -->
+
+    <section>
+        
+    </section>
 
 
 
