--- a/PUP Website/vm.html
+++ b/PUP Website/vm.html
@@ -43,8 +43,8 @@
             <div>
                 <ul>
                     <li><a href="vm.html">Vision and Mission</a></li>
-                    <li><a href="history.html">University</a></li>
-                    <li><a href="">University</a></li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="logo-symbols.html">Logo and Symbols</a></li>
                     <li><a href="">University</a></li>
                     <li><a href="">University</a></li>
                     <li><a href="">University</a></li>
