--- a/PUP Website/about.html
+++ b/PUP Website/about.html
@@ -43,12 +43,11 @@
                     <li><a href="vm.html">Vision and Mission</a></li>
                     <li><a href="history.html">History</a></li>
                     <li><a href="logo-symbols.html">Logo and Symbols</a></li>
-                    <li><a href="#section">University</a></li>
-                    <li><a href="#section">University</a></li>
-                    <li><a href="#section">University</a></li>
-                    <li><a href="#section">University</a></li>
-                    <li><a href="#section">University</a></li>
-                </ul>
+                    <li><a href="hymn-html">Hymn</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
+                    <li><a href="">University</a></li>
             </div>
         </nav>
     </section>
