--- a/PUP Website/hymn.html
+++ b/PUP Website/hymn.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<!-- Home -->
+    <!-- Home -->
 
     <section class="sub-header">
         <nav>
@@ -52,18 +52,19 @@
         </nav>
     </section>
 
-<!-- History content -->
-
-    <section>
-        
-    </section>
+    <!-- pup hymn content -->
 
 
 
 
 
 
-<!-- footer -->
+
+
+
+
+
+    <!-- footer -->
 
     <section class="footer" id="footer">
         <h4>About Us</h4>
