--- a/PUP Website/vm.html
+++ b/PUP Website/vm.html
@@ -45,7 +45,7 @@
                     <li><a href="vm.html">Vision and Mission</a></li>
                     <li><a href="history.html">History</a></li>
                     <li><a href="logo-symbols.html">Logo and Symbols</a></li>
-                    <li><a href="">University</a></li>
+                    <li><a href="hymn-html">Hymn</a></li>
                     <li><a href="">University</a></li>
                     <li><a href="">University</a></li>
                     <li><a href="">University</a></li>
