--- a/PUP Website/hymn.html
+++ b/PUP Website/hymn.html
@@ -54,6 +54,99 @@
 
     <!-- pup hymn content -->
 
+    <section class="hymn-content">
+        <div>
+            <h2>PUP Hymn</h2>
+            <h3>Imno ng PUP</h3>
+            <p>S. Calabig, S. Roldan, and R. Amaranto</p>
+            <div class="hymn-container">
+                <video src="videos/Imno ng PUP.mp4" controls="true"></video>
+            </div>
+            <p>
+                Sintang Paaralan
+                Tanglaw ka ng bayan
+                Pandayan ng isip ng kabataan
+                Kami ay dumating nang salat sa yaman
+                Hanap na dunong ay iyong alay
+                Ang layunin mong makatao
+                Dinarangal ang Pilipino
+                Ang iyong aral, diwa, adhikang taglay
+                PUP, aming gabay
+                Paaralang dakila
+                PUP, pinagpala
+                Gagamitin ang karunungan
+                Mula sa iyo, para sa bayan
+                Ang iyong aral, diwa, adhikang taglay
+                PUP, aming gabay
+                Paaralang dakila
+                PUP, pinagpala
+            </p>
+        </div>
+        <div>
+            <h3>PCC Hymn</h3>
+            <p>
+                Oh! PCC thy glorious name
+                A symbol we'll uphold
+                Forever we will follow on
+                The light that guides us all
+                Thy beacon light has led us through
+                To strive for dignity
+                We'll stand and fight for PCC
+                To keep her name unowned
+                Dear Alma Mater may your brow
+                With Laurels ever crowned
+                All hail the flag of PCC
+                In bright maroon and gold
+                The colors bright for loyalty
+                For service keep unfurled
+                The honors we have always won
+                Shalt live forever on
+                For loyal sons and daughters
+                of our dear PCC
+                Forever thee we'll honor
+                and serve with loyalty.
+            </p>
+        </div>
+        <div>
+            <h3>PUP Imno Sentenyal</h3>
+            <p>
+                Pacelli S. Eugenio and Antonio R. Regalario
+
+                Sandaang taon ng iyong kasaysayan
+                Mula sa abang karukhaang kinagisnan
+                Sa hirap at pagdurusang sakdal labis
+                Nagtiis at di nawalan ng pag-asa
+                Sa puso, sa diwa ay nagtanim ng pangarap.
+
+                Sanlaksang pagsubok binaka
+                Nakipagtunggali sa mga unos ng buhay
+                Ikaâ€™y bumangon, nakibakaâ€™t nagtagumpay
+                Nakamtan ang hangad na dangal
+                Para malayang ikampay
+                Kalayaang bumukal sa kaluluwa ng kabayanihan.
+
+                Sandaang taon ng iyong kasaysayan
+                Maningning kang bantayog ng kagitingan
+                Luningning ka ng kadakilaan
+                Ilaw sa kaisipan ng Kapilipinuhan
+                Nagpupugay kmi sa iyo
+                Pag-asa ka ng bayan.
+
+                Dakila ka PUP, sa diwa mong makabayan
+                Sa kaluluwa mong maka-Diyos
+                Dakila kang totoo.
+
+                PUP, manguna ka
+                Sa husay, sa layaâ€™t katarungan
+                Alay sa dukhang Pilipino
+                Mabuhay ka, magpakailanman.
+
+                PUP Mabuhay ka!
+            </p>
+        </div>
+        
+    </section>
+
 
 
 
