--- a/PUP Website/hymn.html
+++ b/PUP Website/hymn.html
@@ -43,7 +43,7 @@
                     <li><a href="vm.html">Vision and Mission</a></li>
                     <li><a href="history.html">History</a></li>
                     <li><a href="logo-symbols.html">Logo and Symbols</a></li>
-                    <li><a href="hymn-html">Hymn</a></li>
+                    <li><a href="hymn.html">Hymn</a></li>
                     <li><a href="">University</a></li>
                     <li><a href="">University</a></li>
                     <li><a href="">University</a></li>
@@ -55,14 +55,14 @@
     <!-- pup hymn content -->
 
     <section class="hymn-content">
-        <div>
+        <div class="pup-hymn">
             <h2>PUP Hymn</h2>
             <h3>Imno ng PUP</h3>
             <p>S. Calabig, S. Roldan, and R. Amaranto</p>
             <div class="hymn-container">
                 <video src="videos/Imno ng PUP.mp4" controls="true"></video>
             </div>
-            <p>
+            <pre>
                 Sintang Paaralan
                 Tanglaw ka ng bayan
                 Pandayan ng isip ng kabataan
@@ -80,11 +80,11 @@
                 PUP, aming gabay
                 Paaralang dakila
                 PUP, pinagpala
-            </p>
+            </pre>
         </div>
-        <div>
+        <div class="pcc-hymn">
             <h3>PCC Hymn</h3>
-            <p>
+            <pre>
                 Oh! PCC thy glorious name
                 A symbol we'll uphold
                 Forever we will follow on
@@ -105,11 +105,11 @@
                 of our dear PCC
                 Forever thee we'll honor
                 and serve with loyalty.
-            </p>
+            </pre>
         </div>
-        <div>
+        <div class="pup-imno-sentenyal">
             <h3>PUP Imno Sentenyal</h3>
-            <p>
+            <pre>
                 Pacelli S. Eugenio and Antonio R. Regalario
 
                 Sandaang taon ng iyong kasaysayan
@@ -142,7 +142,31 @@
                 Mabuhay ka, magpakailanman.
 
                 PUP Mabuhay ka!
-            </p>
+            </pre>
+        </div>
+        <div class="pup-hymn-eng">
+            <h3>Imno ng PUP</h3>
+            <pre>
+                (English translation, not to be sung)
+
+                Beloved School
+                You are the light of the nation
+                Forger of the youth's mind
+                We came not having much wealth
+                Searching for wisdom that you offer
+                Your objectives are benevolent
+                Honoring the Filipino
+                The lessons, essence, aspirations you possess
+                PUP, our guide
+                A great school
+                PUP, you are blessed
+                We will use the knowledge (we learned)
+                From you, for the country
+                The lessons, essence, aspirations you possess
+                PUP, our guide
+                A great school
+                PUP, you are blessed
+            </pre>
         </div>
         
     </section>
